--- a/.github/workflows/deploy-public.yml
+++ b/.github/workflows/deploy-public.yml
@@ -50,9 +50,11 @@ jobs:
     if: |
       ${{
         (
-          ( needs.check-repo-privacy.outputs.public == 'true') ||
-          (github.event_name == 'push' && !contains(github.event.head_commit.message, '--skip-prerender')) ||
-          (github.event_name == 'pull_request' && !contains(github.event.pull_request.title, '--skip-prerender'))
+          (needs.check-repo-privacy.outputs.private == 'false') && 
+          (
+            (github.event_name == 'push' && !contains(github.event.head_commit.message, '--skip-prerender')) ||
+            (github.event_name == 'pull_request' && !contains(github.event.pull_request.title, '--skip-prerender'))
+          )
         )
       }}
     outputs:
