--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -3,22 +3,33 @@ name: Force update from template
 on:
   workflow_dispatch:
 
-permissions:
-  contents: write
-
 env:
-  TEMPLATE_REPO: "https://github.com/SublimationApp/blanks-catalog-template"
+  TEMPLATE_REPO: "https://github.com/SublimationApp/blanks-catalog-template.git"
   TEMPLATE_REF: "main"
+
+permissions:
+      contents: write
+      actions: write
 
 
 jobs:
   update-from-template:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout target repo
-        uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v6
         with:
-          fetch-depth: 0
+          lfs: true
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0 # Important for merging history
+
+      - name: Setup git
+
+        run: |
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+          git config --global user.email "github-actions[bot]"
+          git config --global user.name "github-actions[bot]@users.noreply.github.com"
 
       - name: Save current dist/config.json
         id: save_config
@@ -32,10 +43,32 @@ jobs:
             echo "saved=false" >> $GITHUB_OUTPUT
           fi
 
+
+      # - name: Sync with Template
+      #   run: |
+      #     # 1. Identify the template URL (Replace with your template's URL)
+      #     git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+      #     git config  user.email "github-actions[bot]"
+      #     git config  user.name "github-actions[bot]@users.noreply.github.com"
+     
+          
+      #     # 3. Add the template as a remote called 'upstream'
+      #     git remote add upstream $TEMPLATE_REPO
+      #     git fetch upstream
+          
+      #     # 4. Merge changes. 
+      #     # Use --allow-unrelated-histories because templates start fresh.
+      #     # 'recursive -X theirs' favors the template's version if there's a conflict.
+      #     git merge upstream/main --allow-unrelated-histories -X theirs --commit -m "chore: sync with template"
+          
+      #     # 5. Push the changes back to your repo
+      #     git push origin main
+
       - name: Fetch upstream template
         run: |
-          # Replace with your template repo URL and branch
           git clone --depth 1 --branch "$TEMPLATE_REF" "$TEMPLATE_REPO" /tmp/template
+          rm -rf /tmp/template/.git 
+          rm   /tmp/template/*.zip || true
 
       - name: Replace repository contents with template
         run: |
@@ -44,23 +77,14 @@ jobs:
           # Remove all files except .git to fully replace
           find . -maxdepth 1 ! -name . -a ! -name .git -exec rm -rf {} +
           # Copy template contents into repo root
+          
           cp -a /tmp/template/. .
-          # Ensure .github and workflow files are present (they will be copied if in template)
-          # Restore preserved file if it existed
-          if [ "${{ steps.save_config.outputs.saved }}" = "true" ]; then
-            mkdir -p dist
-            cp /tmp/keep/config.json dist/config.json
-            cp -a /tmp/keep/*.zip . || true
-          fi
+          cp -f /tmp/keep/config.json dist/config.json
+          cp -a /tmp/keep/*.zip . || true
+
 
       - name: Commit and push forced update
-        env:
-          GIT_AUTHOR_NAME: "github-actions[bot]"
-          GIT_AUTHOR_EMAIL: "41898282+github-actions[bot]@users.noreply.github.com"
         run: |
           git add -A
-          # Use a clear commit message
-          git commit -m "Force update from template" || echo "No changes to commit"
-          # Push to the same branch that triggered the workflow
-          git push origin HEAD:$(git rev-parse --abbrev-ref HEAD)
-
+          git commit -m "Repository updated"
+          git push -f origin main
