--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -25,12 +25,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           fetch-depth: 0 # Important for merging history
 
-      - name: Setup git
 
-        run: |
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
-          git config --global user.email "github-actions[bot]"
-          git config --global user.name "github-actions[bot]@users.noreply.github.com"
 
       - name: Save current dist/config.json
         id: save_config
@@ -86,6 +81,12 @@ jobs:
 
       - name: Commit and push forced update
         run: |
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git checkout --orphan new-branch
           git add -A
-          git commit -m "Repository updated"
+          git commit -m "Initial commit"
+          git branch -D main
+          git branch -m main
           git push -f origin main
