--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -79,14 +79,31 @@ jobs:
           cp -a /tmp/keep/*.zip . || true
 
 
+
+
+
       - name: Commit and push forced update
         run: |
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git checkout --orphan new-branch
+          # git checkout --orphan new-branch
           git add -A
           git commit -m "Initial commit"
-          git branch -D main
-          git branch -m main
+          # git branch -D main
+          # git branch -m main
           git push -f origin main
+
+
+
+      # - name: Commit and push forced update
+      #   run: |
+      #     git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
+      #     git config user.name "github-actions[bot]"
+      #     git config user.email "github-actions[bot]@users.noreply.github.com"
+      #     git checkout --orphan new-branch
+      #     git add -A
+      #     git commit -m "Initial commit"
+      #     git branch -D main
+      #     git branch -m main
+      #     git push -f origin main
